--- a/gitsnap.cabal
+++ b/gitsnap.cabal
@@ -15,9 +15,18 @@ Executable gitsnap
   main-is: Main.hs
   
   build-depends:       
-      base >= 4
-    , snap-core == 0.2.*
+      base        >= 4
+    , bytestring  == 0.9.*
+    , filepath    == 1.1.*
+    , monads-fd   == 0.1.*
+    , old-locale  == 1.0.*
+    , process     == 1.0.*
+    , snap-core   == 0.2.*
     , snap-server == 0.2.*
+    , text        == 0.10.*
+    , time        == 1.1.*
+    , MonadCatchIO-transformers == 0.2.*
+    , xhtml-combinators         == 0.2.*
   
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
