--- a/gitsnap.cabal
+++ b/gitsnap.cabal
@@ -17,13 +17,14 @@ Executable gitsnap
   build-depends:       
       base        >= 4
     , bytestring  == 0.9.*
+    , directory   == 1.1.*
     , filepath    == 1.1.*
     , monads-fd   == 0.1.*
     , old-locale  == 1.0.*
     , process     == 1.0.*
-    , snap-core   == 0.2.*
-    , snap-server == 0.2.*
-    , text        == 0.10.*
+    , snap-core   == 0.4.*
+    , snap-server == 0.4.*
+    , text        == 0.11.*
     , time        == 1.1.*
     , MonadCatchIO-transformers == 0.2.*
     , xhtml-combinators         == 0.2.*
