--- a/gitsnap.cabal
+++ b/gitsnap.cabal
@@ -15,20 +15,22 @@ Executable gitsnap
   main-is: Main.hs
   
   build-depends:       
-      base        >= 4
-    , bytestring  == 0.9.*
-    , directory   == 1.0.*
-    , filepath    == 1.1.*
-    , monads-fd   == 0.1.*
-    , old-locale  == 1.0.*
-    , process     == 1.0.*
-    , snap-core   == 0.4.*
-    , snap-server == 0.4.*
-    , text        == 0.11.*
-    , time        == 1.1.*
+      base          >= 4
+    , blaze-builder == 0.2.*
+    , bytestring    == 0.9.*
+    , directory     == 1.0.*
+    , enumerator    == 0.4.*
+    , filepath      == 1.1.*
+    , monads-fd     == 0.1.*
+    , old-locale    == 1.0.*
+    , process       == 1.0.*
+    , snap-core     == 0.4.*
+    , snap-server   == 0.4.*
+    , text          == 0.11.*
+    , time          == 1.1.*
+    , zlib-bindings == 0.0.*
     , MonadCatchIO-transformers == 0.2.*
     , xhtml-combinators         == 0.2.*
-    , zlib-bindings             == 0.0.*
   
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
