--- a/gitsnap.cabal
+++ b/gitsnap.cabal
@@ -10,9 +10,17 @@ category:       Development
 build-type:     Simple
 cabal-version:  >= 1.2
 
+Flag development
+  Description: Whether to build the server in development (interpreted) mode
+  Default: False
+
 Executable gitsnap
   hs-source-dirs: src
   main-is: Main.hs
+
+  if flag(development)
+    cpp-options: -DDEVELOPMENT
+    build-depends: hint >= 0.3.2 && < 0.4
   
   build-depends:       
       base          >= 4
@@ -21,19 +29,22 @@ Executable gitsnap
     , directory     == 1.0.*
     , enumerator    == 0.4.*
     , filepath      == 1.1.*
+    , heist         == 0.5.*
     , monads-fd     == 0.1.*
     , old-locale    == 1.0.*
     , process       == 1.0.*
+    , snap          == 0.4.*
     , snap-core     == 0.4.*
     , snap-server   == 0.4.*
     , text          == 0.11.*
     , time          == 1.1.*
+    , xmlhtml       == 0.1.*
     , zlib-bindings == 0.0.*
     , MonadCatchIO-transformers == 0.2.*
-    , xhtml-combinators         == 0.2.*
-  
+
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
-                 -fno-warn-unused-do-bind
+                 -fno-warn-orphans -fno-warn-unused-do-bind
   else
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
+                 -fno-warn-orphans
