--- a/mothership.cabal
+++ b/mothership.cabal
@@ -35,6 +35,7 @@ Executable mothership
     , old-locale    == 1.0.*
     , process       == 1.0.*
     , snap          == 0.4.*
+    , snap-auth     == 0.1.*
     , snap-core     == 0.4.*
     , snap-server   == 0.4.*
     , text          == 0.11.*
@@ -42,6 +43,7 @@ Executable mothership
     , xmlhtml       == 0.1.*
     , zlib-bindings == 0.0.*
     , MonadCatchIO-transformers == 0.2.*
+    , snap-extension-mongodb    == 0.3.*
 
   if impl(ghc >= 6.12.0)
     ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
