--- a/mothership.cabal
+++ b/mothership.cabal
@@ -27,6 +27,7 @@ Executable mothership
     , blaze-builder == 0.2.*
     , blaze-html    == 0.4.*
     , bytestring    == 0.9.*
+    , containers
     , directory     == 1.0.*
     , enumerator    == 0.4.*
     , filepath      == 1.1.*
