Check credentials for git push/pull operations
Implemented using basic access authentication for the time
being. This is only secure if SSL is used.

--- a/mothership.cabal
+++ b/mothership.cabal
@@ -43,6 +43,7 @@ Executable mothership
     , time          == 1.1.*
     , xmlhtml       == 0.1.*
     , zlib-bindings == 0.0.*
+    , base64-bytestring         == 0.1.*
     , MonadCatchIO-transformers == 0.2.*
     , snap-extension-mongodb    == 0.3.*
 
